SERVER-72559  [CQF] Fixes for compound index